# genetic-regression

./: .gitignore  CMakeLists.txt  README.md  make  reset  run
appendix/: Expression.md  Mutators.md  Others.md  Reproducers.md  Selectors.md  Solvers.md
configs/: con-crossover.config  con-random.config  continuous-crossover.config  crossover-diversity-large-population.config  crossover-diversity.config  crossover-niching.config  crossover-tournament.config  crossover.config  default.config  hc.config  hillclimber.config  population-hill-climber.config  randomsearch.config  rs.config
inputs/: test.txt
scripts/: plotter.py
src/: main.cpp
src/engine/: Config.cpp  Config.hpp  Constant.cpp  Constant.hpp  Cos.hpp  Divide.hpp  Expression.cpp  Expression.hpp  Minus.cpp  Minus.hpp  OutputLogger.cpp  OutputLogger.hpp  Plus.hpp  Sin.hpp
src/expression/: Constant.cpp  Constant.hpp  Cos.hpp  Divide.hpp  Expression.cpp  Expression.hpp  Minus.hpp  Multiply.hpp  Plus.cpp  Plus.hpp  Sin.cpp  Sin.hpp  Variable.hpp
src/genetic-programming/: ContinuousSolver.cpp  ContinuousSolver.hpp  Crossover.cpp  Crossover.hpp  CrossoverMutatorReproducer.hpp  GenerationalSolver.cpp  GenerationalSolver.hpp  MutatorReproducer.cpp  RandomReproducer.cpp  RandomReproducer.hpp  Reproducer.cpp  Reproducer.hpp  Solver.cpp  Solver.hpp
src/genetic-programming/mutators/: ConstantMultiplierMutator.cpp  ConstantMultiplierMutator.hpp  ConstantMutator.cpp  ConstantMutator.hpp  SubexpressionMutator.cpp  SubexpressionMutator.hpp  TrigMultiplierMutator.cpp  TrigMultiplierMutator.hpp  TruncateMutator.cpp  TruncateMutator.hpp
src/genetic-programming/reproducers/: AsexualReproducer.cpp  AsexualReproducer.hpp  CrossoverMutatorReproducer.cpp  CrossoverMutatorReproducer.hpp  MutatorReproducer.cpp  MutatorReproducer.hpp  RandomReproducer.cpp  RandomReproducer.hpp  Reproducer.cpp  Reproducer.hpp
src/genetic-programming/selectors/: DiversitySelector.cpp  DiversitySelector.hpp  NichingSelector.cpp  NichingSelector.hpp  Selector.hpp  (+2 more)
